@@ -1,3 +1,7 @@
+2010-04-03 Homer Xing <homer.xing@gmail.com>
+
+    * Fix a bug that "autotool" cannot be installed.
+
 2010-04-02 Starboy Qi <starboy.qi@gmail.com>
 
     * Improve copyright text in "About" dialog
